# natural-python

./: .gitignore  README.md  pyproject.toml
natural_python/: __init__.py  __main__.py  console.py  interpreter.py  language_model_api.py
