[tool.poetry]
name = "natural-python"
version = "0.1.0"
description = ""
authors = ["Leo <leohdz.c0@gmail.com>"]
readme = "README.md"
packages = [{include = "natural_python"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
natural-python = "natural_python.console:main"
